--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,11 @@ allprojects {
   ]
 
   dependencies {
-    compile "org.apache.lucene:lucene-core:${versions.lucene}"
-    compile "org.apache.lucene:lucene-sandbox:${versions.lucene}"
+    implementation "org.apache.lucene:lucene-core:${versions.lucene}"
+    implementation "org.apache.lucene:lucene-sandbox:${versions.lucene}"
 
-    testCompile 'org.assertj:assertj-core:3.18.1'
-    testCompile 'org.mockito:mockito-core:3.6.28'
+    testImplementation 'org.assertj:assertj-core:3.18.1'
+    testImplementation 'org.mockito:mockito-core:3.6.28'
 
     testImplementation(platform('org.junit:junit-bom:5.7.0'))
     testImplementation('org.junit.jupiter:junit-jupiter')
@@ -26,6 +26,8 @@ allprojects {
   test {
 	  useJUnitPlatform()
   }
+
+  configurations.implementation.canBeResolved = true
 }
 
 subprojects {
