--- a/indexer/build.gradle
+++ b/indexer/build.gradle
@@ -4,8 +4,8 @@ plugins {
 }
 
 dependencies {
-  compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.12.0'
-  compile 'com.squareup.okhttp3:okhttp:4.9.0'
+  implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.12.0'
+  implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 }
 
 task(buildIndex, dependsOn: 'classes', type: JavaExec) {
