--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -1,7 +1,7 @@
 plugins {
   id 'java'
   id 'application'
-  id 'org.mikeneck.graalvm-native-image' version 'v0.9.0'
+  id 'org.mikeneck.graalvm-native-image' version '1.3.0'
 }
 
 application {
